# pdf-binder

./: .gitignore  BUILD.md  README.md  build.bat  build.ps1  index.html  launch.py  main.py  pdfbinder.spec  pyproject.toml
pagefuse/: app.py  cache.py  pdf_utils.py
pagefuse/routes/: __init__.py  merge.py  split.py
pdf_binder/: app.py  cache.py  history.py  paths.py  pdf_utils.py
pdf_binder/routes/: __init__.py  history.py  merge.py  pages.py  split.py  utils.py
static/css/: base.css  components.css  layout.css  tokens.css
static/js/: api.js  app.js  auth.js  helpers.js  history.js  render.js  state.js
tests/: test_routes.py
