[project]
name = "pdf-binder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "pypdf>=6.12.2",
    "pypdfium2>=5.8.0",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]
